--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -11,7 +11,40 @@
     <title>Title</title>
 </head>
 <body>
-    <h1 align="center">Galeria</h1>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-target="#navbar" aria-expanded="false">
+                    <span class="sr-only">Toggle Navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'images:index' %}">Galeria</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav"></ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                        <li><a class="glyphicon glyphicon-user" href="{% url 'images:index' %}">{{user.username}}</a> </li>
+                        <li><a class="glyphicon glyphicon-log-out" href="{% url 'images:logout' %}">Logout</a></li>
+                    {% else %}
+                        <li><a href="{% url 'images:addUser' %}">Registro</a></li>
+                        <li><a class="glyphicon glyphicon-log-in" href="{% url 'images:login' %}">Login</a></li>
+                    {%  endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <h1 align="center" style="margin-top: 80px">Galeria</h1>
+    {% if user.is_authenticated %}
+        <a href="{% url 'images:addImage' %}" class="btn btn-primary">
+            <span class="glyphicon glyphicon-plus-sign"></span>
+            Agregar imagen
+        </a>
+        <br>
+        <br>
+    {% endif %}
     {% for imagen in lista_imagenes %}
         <div class="col-md-4 col-sm-6 col-lg-3 well">
             {% if imagen.imageFile == None %}
