loads data from json and uploads data using rest

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,58 +1,84 @@
-{# Load the tag library #}
-{% load bootstrap3 %}
-
-{# Load the tag library #}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script>
+        (function(){
+            $.getJSON("http://localhost:8000/polls/images").done(function (data) {
+                $.each(data, function (i, item) {
+                    if(item.fields.imageFile==="" || item.fields.imageFile===undefined) {
+                        $("#imagenes").prepend('<div class="col-md-4 col-sm-6 col-lg-3 well"><img src="'
+                            + item.fields.url + '" class="img-responsive" style="width: 500px; height: 300px"></div>');
+                    }
+                    else {
+                        $("#imagenes").prepend('<div class="col-md-4 col-sm-6 col-lg-3 well"><img src="http://localhost:8000/'
+                            + item.fields.imageFile + '" class="img-responsive" style="width: 500px; height: 300px"></div>');
+                    }
+                });
+            });
+        })();
+
+        (function () {
+            $.getJSON("http://localhost:8000/polls/isLogged").done(function (data) {
+                if (data.mensaje === "no"){
+                    $("#add_user").show();
+                    $("#cerrar_sesion").hide();
+                    $("#add_image").hide();
+                    $("#login_user").show();
+                }
+                else{
+                    $("#add_user").hide();
+                    $("#cerrar_sesion").show();
+                    $("#add_image").show();
+                    $("#login_user").hide();
+                }
+            });
+        })();
+
+        function logout() {
+            $.getJSON("http://localhost:8000/polls/logout").done(function (data) {
+                if(data.mensaje == "ok"){
+                    location.reload();
+                }
+                else {
+                    alert("Hubo Error")
+                }
+            });
+        }
+    </script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-target="#navbar" aria-expanded="false">
-                    <span class="sr-only">Toggle Navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url 'images:index' %}">Galeria</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav"></ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
-                        <li><a class="glyphicon glyphicon-user" href="{% url 'images:index' %}">{{user.username}}</a> </li>
-                        <li><a class="glyphicon glyphicon-log-out" href="{% url 'images:logout' %}">Logout</a></li>
-                    {% else %}
-                        <li><a href="{% url 'images:addUser' %}">Registro</a></li>
-                        <li><a class="glyphicon glyphicon-log-in" href="{% url 'images:login' %}">Login</a></li>
-                    {%  endif %}
-                </ul>
-            </div>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-target="#navbar" aria-expanded="false">
+                <span class="sr-only">Toggle Navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="http://localhost:8000/polls/verImagenes">Galeria</a>
         </div>
-    </nav>
-    <h1 align="center" style="margin-top: 80px">Galeria</h1>
-    {% if user.is_authenticated %}
-        <a href="{% url 'images:addImage' %}" class="btn btn-primary">
-            <span class="glyphicon glyphicon-plus-sign"></span>
-            Agregar imagen
-        </a>
-        <br>
-        <br>
-    {% endif %}
-    {% for imagen in lista_imagenes %}
-        <div class="col-md-4 col-sm-6 col-lg-3 well">
-            {% if imagen.imageFile == None %}
-                <img class="img-responsive" src="{{imagen.url}}" width="500" height="300"/>
-            {% else %}
-                <img class="img-responsive" src="/{{imagen.imageFile}}" width="500" height="300"/>
-          {% endif %}
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav"></ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li id="add_image"><a href="http://localhost:8000/polls/agregarImagen">Agregar Imagen</a></li>
+                <li id="add_user"><a href="http://localhost:8000/polls/agregarUsuario">Registro</a></li>
+                <li id="cerrar_sesion">
+                    <a class="glyphicon glyphicon-log-out" href="#" id="clic_cerrar_sesion" onclick="logout();">Logout</a>
+                </li>
+                <li id="login_user">
+                    <a class="glyphicon glyphicon-log-in" href="http://localhost:8000/polls/ingresar">Login</a>
+                </li>
+            </ul>
         </div>
-    {% endfor %}
+    </div>
+</nav>
+<h1 align="center" style="margin-top: 80px">Galeria</h1>
+<div class="row" id="imagenes"></div>
 </body>
 </html>
