--- a/polls/templates/polls/image_form.html
+++ b/polls/templates/polls/image_form.html
@@ -1,26 +1,40 @@
-{# Load the tag library #}
-{% load bootstrap3 %}
-
-{# Load the tag library #}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
-    <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
-        {% block content %}
-        <form action="{% url 'images:addImage' %}" enctype="multipart/form-data" method="post">
-            {% csrf_token %}
-            {% bootstrap_form form %}
-            {% buttons %}
-            <input type="submit" value="Añadir" class="btn btn-primary btn-block">
-            {% endbuttons %}
-        </form>
-        {% endblock %}
-    </div>
+<div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
+    <form id="formImagen" action="http://localhost:8000/polls/add/" enctype="multipart/form-data" method="post">
+        <input id="url" name="url" type="text" placeholder="URL" class="form-control input-md" required=""><br>
+        <input id="title" name="title" type="text" placeholder="Title" class="form-control input-md" required=""><br>
+        <input id="type" name="type" type="text" placeholder="Type" class="form-control input-md" required=""><br>
+        <input id="descripcion" name="descripcion" type="text" placeholder="Descripcion" class="form-control input-md" required=""><br>
+        <input id="imageFile" name="imageFile" type="file" required><br>
+        <input type="submit" value="Añadir" class="btn btn-primary btn-block">
+        <a href="http://localhost:8000/polls/verImagenes" class="btn btn-primary">Cancelar</a>
+    </form>
+</div>
+<script>
+    $('form').submit(function (e) {
+        var formData = new FormData($("#formImagen")[0]);
+        $.ajax({
+            url: $(this).attr('action'),
+            type: $(this).attr('method'),
+            data: formData,
+            cache: false,
+            contentType: false,
+            processData: false,
+            success: function () {
+                window.location = "http://localhost:8000/polls/verImagenes";
+            },
+        });
+        e.preventDefault();
+    });
+</script>
 </body>
 </html>
