--- a/polls/templates/polls/login.html
+++ b/polls/templates/polls/login.html
@@ -1,41 +1,59 @@
-{# Load the tag library #}
-{% load bootstrap3 %}
-
-{# Load the tag library #}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script>
+        function enviarForm(){
+            $.ajax({
+                type: "POST",
+                url: "http://localhost:8000/polls/login/",
+                data: JSON.stringify({
+                    username: $('#username').val(),
+                    password: $('#password').val(),
+                }),
+                contentType: "application/json; charset=UTF-8",
+                dataType: "json",
+                success: function(data){
+                    if(data.mensaje == "ok"){
+                        window.location = "http://localhost:8000/polls/verImagenes";
+                    }
+                    else {
+                        $("#mensaje").text(data.mensaje);
+                    }
+                },
+                failure: function(errMsg){
+                    alert("Hubo un error.");
+                }
+            });
+            return false;
+        }
+    </script>
 </head>
 <body>
-    {% block content %}
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <div class="page-header"><h2>Login</h2></div>
-                {% if mensaje %}
-                    <div class="alert alert-danger">
-                        {{ mensaje }}
-                    </div>
-                {% endif %}
-
-                <form action="" method="post">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="username" class="control-label">Nombre de usuario</label>
-                        <input type="text" id="username" name="username" class="form-control" value="{{ username }}">
-                    </div>
-                    <div class="form-group">
-                        <label for="password" class="control-label">Contraseña</label>
-                        <input type="password" id="password" class="form-control" name="password">
-                    </div>
-                    <button class="btn btn-primary" type="submit">Login</button>
-                    <a href="{% url 'images:index' %}" class="btn btn-primary">Cancelar</a>
-                </form>
-            </div>
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+        <div class="page-header"><h2>Login</h2></div>
+        <div class="alert alert-danger">
+            <label id = "mensaje"></label>
         </div>
-    {% endblock %}
+
+        <form method="post" action="" onsubmit="return enviarForm();">
+            <div class="form-group">
+                <label for="username" class="control-label">Nombre de usuario</label>
+                <input type="text" id="username" name="username" class="form-control" value="{{ username }}">
+            </div>
+            <div class="form-group">
+                <label for="password" class="control-label">Contraseña</label>
+                <input type="password" id="password" class="form-control" name="password">
+            </div>
+            <button class="btn btn-primary" type="submit">Login</button>
+            <a href="http://localhost:8000/polls/verImagenes" class="btn btn-primary">Cancelar</a>
+        </form>
+    </div>
+</div>
 </body>
 </html>
